-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u60, 8, 9, 10
-
Component/s: core-libs
-
b13
The test
java/lang/instrument/BootClassPath/BootClassPathTest.sh
has been observed to fail on mac platforms. This should be investigated.
When fixed the test can be removed from ProblemList.txt
Update: The problem appears to be a regression introduced by changes to how sun.jnu.encoding is handled. The code now being used does not seem to correctly handle unicode in directory names, at least on OS X. See comments from January 10 2018 below.
java/lang/instrument/BootClassPath/BootClassPathTest.sh
has been observed to fail on mac platforms. This should be investigated.
When fixed the test can be removed from ProblemList.txt
Update: The problem appears to be a regression introduced by changes to how sun.jnu.encoding is handled. The code now being used does not seem to correctly handle unicode in directory names, at least on OS X. See comments from January 10 2018 below.
- relates to
-
JDK-8256405 java/lang/instrument/BootClassPath/ tests fail (macOS)
-
- Open
-
-
JDK-8011194 Apps launched via double-clicked .jars have file.encoding value of US-ASCII on Mac OS X
-
- Resolved
-
-
JDK-8072371 Add two failing svc tests to the problem list
-
- Resolved
-
-
JDK-8003228 (props) sun.jnu.encoding should be set to UTF-8 [macosx]
-
- Closed
-
-
JDK-8169949 Remove java/lang/instrument/BootClassPath/BootClassPathTest.sh from ProblemList.txt
-
- Closed
-