8072130: java/lang/instrument/BootClassPath/BootClassPathTest.sh fails on Mac OSX

Reviewed-by: sherman